--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
 
 <body>
     <div class="container">
-        <h1>🚀 Frank + MySQL App</h1>
+        <h1>🚀 Frank + MySQL App Demo </h1>
 
         <div class="messages">
             {% for message in messages %}
